# IDOR-CrawlerScanSuite

./: .gitignore  LICENSE  README.md  examples.sh  idor_scanner  pyproject.toml  requirements.txt
demo/: README.md  test_scanner.py  test_server.py
docs/: CONFIG.md
src/idor_scanner/: __init__.py  crawler.py  idor_tester.py  main.py  parameter_identifier.py  reporter.py  session_manager.py
