[project]
name = "idors-crawler"
version = "0.1.0"
description = "Advanced IDOR vulnerability scanner for bug bounty hunting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "urllib3>=2.0.0",
    "lxml>=4.9.0",
    "flask>=3.1.1",
]
